--- a/Rental.API/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Rental.API/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,44 +1,20 @@
-<header>
-  <nav
-    class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
-  >
-    <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">Rental.API</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target=".navbar-collapse"
-        aria-label="Toggle navigation"
-        [attr.aria-expanded]="isExpanded"
-        (click)="toggle()"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div
-        class="navbar-collapse collapse d-sm-inline-flex justify-content-end"
-        [ngClass]="{ show: isExpanded }"
-      >
-        <ul class="navbar-nav flex-grow">
-          <li
-            class="nav-item"
-            [routerLinkActive]="['link-active']"
-            [routerLinkActiveOptions]="{ exact: true }"
-          >
-            <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/counter']"
-              >Counter</a
-            >
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/fetch-data']"
-              >Fetch data</a
-            >
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</header>
+<mat-toolbar color="primary">
+
+  <mat-toolbar-row>
+    <span>
+      Equipment rental
+    </span>
+    <span class="spacer"></span>
+
+    <span class="greet">
+      Hello, {{customer.name}}!&nbsp;
+    </span>
+    <mat-chip-list>
+      <mat-chip color="accent" selected>Loyalty points: {{customer.loyaltyPoints}}</mat-chip>
+    </mat-chip-list>
+    <span>
+
+
+    </span>
+  </mat-toolbar-row>
+</mat-toolbar>
