--- a/Rental.API/ClientApp/src/app/home/home.component.css
+++ b/Rental.API/ClientApp/src/app/home/home.component.css
@@ -4,7 +4,8 @@
 
 .container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
   gap: 16px;
 }
