git cache clean

--- a/Rental.API/ClientApp/src/app/home/home.component.html
+++ b/Rental.API/ClientApp/src/app/home/home.component.html
@@ -1,24 +1,84 @@
-<mat-grid-list style="margin-top:48px;" cols=3 rowHeight="800px">
-  <mat-grid-tile [colspan]="2" [rowspan]="1">
-    <div class="container">
-      <mat-card *ngFor="let item of equipment" class="card">
-        <mat-card-title>
-          {{item.name}}
-        </mat-card-title>
-        <mat-card-subtitle>
-          {{item.type}}
-        </mat-card-subtitle>
+<mat-grid-list style="margin-top:48px;" cols=12 gutterSize="12" rowHeight="600px">
+  <mat-grid-tile [colspan]="5">
+    <mat-grid-tile-header>Available equipment</mat-grid-tile-header>
+    <div class="form-container">
+      <mat-form-field>
+        <mat-label>Equipment</mat-label>
+        <mat-select [(ngModel)]="selectedEquip" name="equipment">
+          <mat-option *ngFor="let item of equipment" [value]="item">{{item.name}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Type</mat-label>
+        <input matInput disabled type="text" value="{{selectedEquip.type}}">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Rent days</mat-label>
+        <input [(ngModel)]="daysOfRent" matInput type="number" min="1" max="90">
+      </mat-form-field>
+      <button (click)="AddItemToOrder()" mat-flat-button color="accent">Add to cart</button>
 
-        <mat-card-actions>
-          <mat-form-field appearance="standard">
-            <mat-label>Days of renting</mat-label>
-            <mat-select>
-              <mat-option *ngFor="let item of [].constructor(14); let i = index" value="{{i+1}}">{{i+1}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <button mat-stroked-button (click)="AddItemToOrder(item.id, 1)" color="primary">ADD ITEM</button>
-        </mat-card-actions>
-      </mat-card>
+    </div>
+
+  </mat-grid-tile>
+  <mat-grid-tile [colspan]="7">
+    <mat-grid-tile-header>Your cart</mat-grid-tile-header>
+    <div class="cart-container">
+      <table *ngIf="order.RentalItems.length !== 0" mat-table [dataSource]="cartDataSource" class="mat-elevation-z8">
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <td mat-cell *matCellDef="let item">{{item.Name}}</td>
+        </ng-container>
+        <ng-container matColumnDef="type">
+          <th mat-header-cell *matHeaderCellDef>Type</th>
+          <td mat-cell *matCellDef="let item">{{item.Type}}</td>
+        </ng-container>
+        <ng-container matColumnDef="duration">
+          <th mat-header-cell *matHeaderCellDef>Days of rent</th>
+          <td mat-cell *matCellDef="let item">{{item.DaysOfRental}}</td>
+        </ng-container>
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let item">
+            <button (click)="removeItemFromOrder(item)" mat-icon-button color="warn">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="cartDisplayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: cartDisplayedColumns;"></tr>
+      </table>
+      <p style="text-align: center;" *ngIf="order.RentalItems.length === 0">There is nothing in the cart yet...</p>
+      <button style="max-width: 180px;" *ngIf="order.RentalItems.length != 0" mat-flat-button (click)="PlaceOrder()"
+        color="primary">Place
+        order</button>
+    </div>
+
+  </mat-grid-tile>
+  <mat-grid-tile [colspan]="12">
+    <mat-grid-tile-header>Your orders</mat-grid-tile-header>
+    <div class="order-container">
+      <table *ngIf="customerOrders.length !== 0" mat-table [dataSource]="orderDataSource" class="mat-elevation-z8">
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef>Order No.</th>
+          <td mat-cell *matCellDef="let item">{{item.id}}</td>
+        </ng-container>
+        <ng-container matColumnDef="items">
+          <th mat-header-cell *matHeaderCellDef>Items in order</th>
+          <td mat-cell *matCellDef="let item">{{item.rentItems.length}}</td>
+        </ng-container>
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let item">
+            <button mat-flat-button color="primary" (click)="getInvoice(item.id)">
+              Invoice
+            </button>
+          </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="orderDisplayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: orderDisplayedColumns;"></tr>
+      </table>
+      <p style="text-align: center;" *ngIf="customerOrders.length === 0">There are no orders yet...</p>
     </div>
   </mat-grid-tile>
 </mat-grid-list>
