--- a/Rental.API/ClientApp/src/app/home/home.component.css
+++ b/Rental.API/ClientApp/src/app/home/home.component.css
@@ -1,11 +1,26 @@
-.card {
-  max-width: 400px;
+.form-container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
 }
 
-.container {
+.order-container {
+  min-width: 25%;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  flex-direction: column;
+}
+
+.cart-container {
+  min-width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   gap: 16px;
+}
+
+table {
+  width: 100%;
 }
